--- a/index.html
+++ b/index.html
@@ -809,23 +809,23 @@
             
         const photos = [
             { 
-                url: './imeges/WhatsApp Image 2025-11-30 at 6.34.15 PM.jpeg', 
+                url: './WhatsApp Image 2025-11-30 at 6.34.15 PM.jpeg', 
                 caption: 'أجمل لحظاتنا سوا 💕' 
             },
             { 
-                url: './imeges/WhatsApp Image 2025-11-30 at 6.32.42 PM (1).jpeg', 
+                url: './WhatsApp Image 2025-11-30 at 6.32.42 PM (1).jpeg', 
                 caption: 'أحلى ضحكة بتملى قلبي سعادة ❤️' 
             },
             { 
-                url: './imeges/WhatsApp Image 2025-11-30 at 6.32.40 PM (2).jpeg', 
+                url: './WhatsApp Image 2025-11-30 at 6.32.40 PM (2).jpeg', 
                 caption: 'حياتي وتانتونتي التوتي توتي ❤️🌸' 
             },
             { 
-                url: './imeges/WhatsApp Image 2025-11-30 at 6.32.39 PM (2).jpeg', 
+                url: './WhatsApp Image 2025-11-30 at 6.32.39 PM (2).jpeg', 
                 caption: 'إنتِ أحلى نعمة في حياتي 🎁💖' 
             },
             { 
-                url: './imeges/WhatsApp Image 2025-11-30 at 6.32.42 PM (2).jpeg', 
+                url: './WhatsApp Image 2025-11-30 at 6.32.42 PM (2).jpeg', 
                 caption: 'هتفضلي دايمًا حياتي 💝' 
             }
         ];
@@ -1097,4 +1097,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
